Prevent E_NOTICE errors on calculating the scores.

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.1.1-pl         ++
++         Released: 10/12/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
Fix issue with &parents which wouldn't find direct descendants.
Prevent error messages (and possible failure) if only one resource field is chosen.

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.1.0-pl         ++
++         Released: 04/12/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
Add new exclude property to exclude specific resources from the output.
Add new returnTVs property to include TV values in the snippet output. 

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.0.2-pl2        ++
++         Released: 10/11/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
(pl2) Fix bug which would include all resources if no resource fields are used in the &fields property.
Fix bug which didn't filter out the current resource properly by refactoring the query.
Make sure the debug data being spit out is actually usable and not just one blurb of data.
Make sure tags are checked in a case insensitive manner to improve dataset. Fixes lack of results on some configurations.
Fix bug that ignores ignoreHidden and ignoreUnpublished setting

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.0.1-pl2        ++
++         Released: 27/10/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
Fix bug where tpl files are chosen over actual chunks.
Fix bug with &parents and TVs in the &fields property.
Add custom sort function to class for cleanliness

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.0.0-pl         ++