@@ -1,3 +1,4 @@
+Add &hideContainers property to allow filtering out of containers.
 Prevent E_NOTICE errors on calculating the scores.
 
 ++++++++++++++++++++++++++++++++++++
